Refactor SQL structure and switch pgtype to builtin types
The code has been refactored to use builtin Golang types like 'time.Time', 'int32', and 'float64' instead of 'pgtype' types. Changes have been also made to the SQL files, ensuring data entered into tables is 'NOT NULL'. Adjustments were made to 'SaveSleep' and 'SaveSleepParams', to streamline 'SaveSleepDuration' and 'SaveSleepRating' into 'SaveSleep'.

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,3 +8,9 @@ sql:
         package: "austinapi_db"
         out: "austinapi_db"
         sql_package: "pgx/v5"
+        emit_pointers_for_null_types: true
+        overrides:
+          - db_type: "date"
+            go_type: "time.Time"
+          - db_type: "pg_catalog.timestamp"
+            go_type: "time.Time"
