Replace UUID with Int64 and import sqids library
The code changes focus on refactoring the Sleep functionality. Instead of relying on UUID, the code now uses an int64 for the 'ID' field. This has implications throughout the code, from database queries to conversion functions. Additionally, some of the code related to retrieving and listing Sleep data has been commented out. The sqids library has been added, with code using its functions for encoding and decoding.

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -19,3 +19,5 @@ sql:
             go_type: "int"
           - db_type: "uuid"
             go_type: "github.com/google/uuid.UUID"
+          - db_type: "serial"
+            go_type: "uint64"
