--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -10,6 +10,7 @@ sql:
         sql_package: "pgx/v5"
         emit_pointers_for_null_types: true
         emit_empty_slices: true
+        emit_json_tags: true
         overrides:
           - db_type: "date"
             go_type: "time.Time"
